# 000_Bootcamp_Engenharia_Dados

./: README.md  main.py
Aula_000_Preparacao_Ambiente/: .gitignore  README.md  install_pyenv.sh  pip_freeze.sh  unistall_pyenv.sh
Aula_000_Preparacao_Ambiente/projeto_django/: pyproject.toml
Aula_001_Variaveis_Em_Python/: README.md  exemplo.py
projeto_django/: README.md  pyproject.toml
