[tool.poetry]
name = "projeto-django"
version = "0.1.0"
description = ""
authors = ["Adrianogvs <adriano.silva@alunos.unicesumar.edu.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
